# lucifer

./: .gitignore  Cargo.toml  README.md  flake.nix  lucifer.toml
nix/: lucifer.nix  package.nix
src/: config.rs  dns.rs  main.rs  proxy.rs
