[package]
name = "lucifer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.6.0", features = ["derive"]}

[lints.clippy]
panic         = "deny"
unwrap_used   = "deny"
expect_used   = "warn"

todo          = "warn"
unimplemented = "warn"
unreachable   = "warn"
dbg_macro     = "warn"
